[tool.poetry]
name = "laftel"
version = "0.1.0"
description = "Unofficial Python Laftel.net API Wrapper"
authors = ["Leo Kim <me@leok.kr>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
